# Master-Project

./: .gitignore  README.md  sync_to_public.sh
data/nrk_tegnspraaknytt/: Tegnspråknytt - 1. april.nb-ttv.vtt  Tegnspråknytt - 1. august.nb-ttv.vtt  Tegnspråknytt - 1. juli.nb-ttv.vtt  Tegnspråknytt - 1. november 2024.nb-ttv.vtt  Tegnspråknytt - 1. oktober.nb-ttv.vtt  Tegnspråknytt - 1. september.nb-ttv.vtt  Tegnspråknytt - 10. april.nb-ttv.vtt  Tegnspråknytt - 10. desember 2024.nb-ttv.vtt  Tegnspråknytt - 10. februar.nb-ttv.vtt  Tegnspråknytt - 10. januar.nb-ttv.vtt  Tegnspråknytt - 10. juli.nb-ttv.vtt  Tegnspråknytt - 10. juni.nb-ttv.vtt  Tegnspråknytt - 10. mars.nb-ttv.vtt  Tegnspråknytt - 10. oktober.nb-ttv.vtt  Tegnspråknytt - 10. september.nb-ttv.vtt  Tegnspråknytt - 11. april.nb-ttv.vtt  Tegnspråknytt - 11. august.nb-ttv.vtt  Tegnspråknytt - 11. desember 2024.nb-ttv.vtt  Tegnspråknytt - 11. februar.nb-ttv.vtt  Tegnspråknytt - 11. juli.nb-ttv.vtt  Tegnspråknytt - 11. juni.nb-ttv.vtt  Tegnspråknytt - 11. mars.nb-ttv.vtt  (+226 more)
data_collection/: check_multi.py  get_stats.py  get_tables.py
data_collection/scrape-NRK/: .gitignore  download_log.txt  nrk_downloader.py  pyproject.toml
experiment_single_sign/: .gitignore  README.md  analysis.py  experiment.py
preprocess_news/: .gitignore  README.md  split_vid_by_subtitles.py
sign_transcription/: .gitignore  README.md  experiment_dictionary.py  experiments_continous.py  main.py  pose.py  run_visualizations.py  segmentation.py  sign.bak  sign.eaf  transcription.py  vizualize_signwriting.py
src/: README.md
(+19360 files in other folders)
