[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrk-tegnspraaknytt-downloader"
version = "1.0.0"
description = "Download NRK Tegnspråknytt videos with Norwegian subtitles"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NRK Downloader", email = "user@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2024.8.6",
]

[project.optional-dependencies]
dev = [
    "tqdm>=4.67.1",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[project.scripts]
nrk-downloader = "nrk_downloader:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["src/nrk_downloader"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]